--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <mat-toolbar color="primary">
   <mat-icon>local_fire_department</mat-icon>
-  <span>Kanban Fire</span></mat-toolbar
->
-<div class="container-wrapper">
-  <div class="content-wrapper">
-    <button (click)="newTask()" mat-button>
-      <mat-icon>add</mat-icon> Add Task
-    </button>
+  <span>Kanban Fire</span>
+</mat-toolbar>
 
+<div class="content-wrapper">
+  <button (click)="newTask()" mat-button>
+    <mat-icon>add</mat-icon> Add Task
+  </button>
+
+  <div class="container-wrapper">
     <div class="container">
       <h2>Backlog</h2>
 
