--- a/src/app/components/task-dialog/task-dialog.component.html
+++ b/src/app/components/task-dialog/task-dialog.component.html
@@ -10,5 +10,14 @@
 
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="{ task: data.task }">OK</button>
+  <button
+    *ngIf="data.enableDelete"
+    mat-fab
+    color="primary"
+    aria-label="Delete"
+    [mat-dialog-close]="{ task: data.task, delete: true }"
+  >
+    <mat-icon>delete</mat-icon>
+  </button>
   <button mat-button (click)="cancel()">Cancel</button>
 </div>
